Change dropdown and Back button alignment

--- a/src/main/webapp/sortedReviews.html
+++ b/src/main/webapp/sortedReviews.html
@@ -46,9 +46,9 @@
         <div class="container" id="container">
             <div class="row category-heading text-center">
                 <span>Camera Reviews </span>
-                    <div>
-                        <button type="button" class="btn btn-primary" onclick = "location.href='user-reviews.html'">Back</button>
-                    </div>
+                <span style="float:right; margin-top:-0.5%">
+                    <button type="button" class="btn btn-primary" onclick = "location.href='user-reviews.html'">Back</button>
+                </span>
             </div>
         </div>
         <!--<div id="popup" style="display: none">some text here</div>-->
