Update home, user-reviews js/cs/html

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -90,7 +90,7 @@
                     <div class="row">
                         <div class="col-md-12 review-heading">
                             <span class="review-heading-left-block">Latest Cell Phone Reviews</span>
-                            <a href="user-reviews.html"><span class="review-heading-right-block">See more</span></a>
+                            <a href="user-reviews.html?cid=3"><span class="review-heading-right-block">See more</span></a>
                         </div>
                     </div>
                         <div class="row">
@@ -253,7 +253,7 @@
                      <div class="row">
                         <div class="col-md-12 review-heading">
                             <span class="review-heading-left-block">Latest Camera Reviews</span>
-                            <a href="user-reviews.html"><span class="review-heading-right-block">See more</span></a>
+                            <a href="user-reviews.html?cid=1"><span class="review-heading-right-block">See more</span></a>
                         </div>
                      </div>   
                         <div class="row">
