--- a/src/main/webapp/start.html
+++ b/src/main/webapp/start.html
@@ -10,6 +10,7 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 
     <!-- Google Web font -->
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto' rel='stylesheet' type='text/css'>
@@ -32,13 +33,22 @@
 <div class="wrapper">
     <!-- header-->
     <header>
-        <span>Revify</span>
+        <div class="container">
+            <span>Revify</span>
+        </div>
     </header>
     <!-- content-->
     <section>
-        <div class="container product-cards">
-            <div class="row">
-            </div>
+        <div class="container-fluid product-cards">
+            <nav class="main">
+                <ul>
+                    <li><a href="#" id="products"><img src="images/to-review.png"></a></li>
+                    <li><a href="#" id="leaderboard"><img src="images/leaderboard.png"></a></li>
+                </ul>
+            </nav>
+           <div class="row">
+
+           </div>
         </div>
 
         <div class="loader"></div>
@@ -48,6 +58,7 @@
         <span>© Copyright Revify</span>
     </footer>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script src="js/start.js"></script>
 </div>
 </body>
