--- a/src/main/webapp/arena_new.html
+++ b/src/main/webapp/arena_new.html
@@ -32,6 +32,7 @@
 </head>
 <body>
     <canvas id="arena"></canvas>
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script type="text/javascript" src="js/arena_new.js"></script>
 </body>
 </html>
