review loading and header issues are fixed and back button is added on detailedreview page

--- a/src/main/webapp/detailedReviews.html
+++ b/src/main/webapp/detailedReviews.html
@@ -40,8 +40,12 @@
         </nav>
     </header>
     <section id = "section">
+        <span style="float:right; margin-top:1%">
+           <button type="button" class="btn btn-primary" onclick = "location.href='user-reviews.html'">Back</button>
+        </span>
         <div class="container" id = "container">
-            </div>
+
+        </div>
     </section>
     <!-- footer -->
     <footer>
