--- a/src/main/webapp/sortedReviews.html
+++ b/src/main/webapp/sortedReviews.html
@@ -44,8 +44,8 @@
     </header>
     <section id="section">
         <div class="container" id="container">
-            <div class="row category-heading text-center">
-                <span>Camera Reviews </span>
+            <div class="row category-heading text-center" id="heading">
+                <!--<span>Camera Reviews </span>-->
                 <span style="float:right; margin-top:-0.5%">
                     <button type="button" class="btn btn-primary" onclick = "location.href='user-reviews.html'">Back</button>
                 </span>
