--- a/src/main/webapp/user-reviews.html
+++ b/src/main/webapp/user-reviews.html
@@ -43,8 +43,8 @@
 		</header>
 		<section id="section">
 			<div class="container-fluid" id="container">
-                <div class="row category-heading text-center">
-                    <span style="margin-left: 10%">Camera Reviews</span>
+                <div class="row category-heading text-center" id="heading">
+                    <!--<span style="margin-left: 10%">Camera Reviews</span>-->
                     <span style="float:right; margin-top:-0.5%">
                         <input style="height: 33px; font-size: 14px; alignment: center;" placeholder="Select feature..." type="text" name = "featureDropdown" list="featureDropdown" id="featureDropdownValue" onclick="showButton()"/>
                         <datalist id = "featureDropdown"></datalist>
