Latest reviews Javascript

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -101,7 +101,7 @@
                             <div class="col-md-3 col-sm-6 col-xs-12">
                                 <div class="review-panel review-card">
                                     <div class="review-card-image review-border">
-                                        <a href="">
+                                        <a href="latest-review.html?pid=3">
                                             <img class="img-responsive" src="images/products/iphone6-plus.jpg">
                                         </a>
                                     </div>    
@@ -109,7 +109,7 @@
 
                                         <div class="row row-table review-border">
                                              <div class="col-xs-12 text-center pv-lg">
-                                                <span class="fs-20 text-bold">iPhone 6</span>
+                                                <span class="fs-20 text-bold"></span>
                                              </div>                                             
                                         </div>
                                      
@@ -118,8 +118,8 @@
                                                 <img src="images/heart-small.png" class="rv-pd img-responsive">
                                             </div>
                                             <div class="col-xs-8 pv-lg text-right fs-14">
-                                                <div class="m0 text-bold fs-22">3.5</div>
-                                                <div class="text-uppercase fs-14">Rating</div>
+                                                <div class="m0 text-bold fs-22"></div>
+                                                <div class="text-uppercase fs-14"></div>
                                             </div>
                                         </div> 
                                        
