commit home page changes

--- a/src/main/webapp/template-latest-review.html
+++ b/src/main/webapp/template-latest-review.html
@@ -33,7 +33,7 @@
                         <div class="dl-menuwrapper">
                             <button class="dl-trigger"></button>
                             <ul class="dl-menu">
-                                <li><div><img src="images/camera-icon.png"><a href="user-reviews.html?cid=1"><span>Digital Cameras</span></a></div></li><li><div><img src="images/laptop-icon.png"><a href="user-reviews.html?cid=2"><span>Laptop</span></a></div></li><li><div><img src="images/phone-icon.png"><a href="user-reviews.html?cid=3"><span>Cell Phones &amp; Smartphones</span></a></div></li><li><div><img src="images/tv-icon.png"><a href="user-reviews.html?cid=4"><span>TV</span></a></div></li><li><div><img src="images/tablet-icon.png"><a href="user-reviews.html?cid=7"><span>Tablet</span></a></div></li><li><div><img src="images/toy-icon.png"><a href="user-reviews.html?cid=8"><span>Toys</span></a></div></li><li><div><img src="images/watch-icon.png"><a href="user-reviews.html?cid=9"><span>Watch</span></a></div></li><li><div><img src="images/shoe-icon.png"><a href="user-reviews.html?cid=10"><span>Shoes</span></a></div></li></ul>
+                            </ul>
                         </div>
                     </div>
                     <div class="login col-md-6">
@@ -73,7 +73,8 @@
                                         <div class="feature-label">Lens</div>
                                         <div class="feature-review-bar">
                                             <div class="fill-red fill" data-width="100" style="width: 100px;"></div>
-                                        </div><div class="feature-rating red">1</div>
+                                        </div>
+                                        <div class="feature-rating red">1</div>
                                         <div class="clear"></div>
                                     </li>
                                     <li>
