--- a/src/main/webapp/start.html
+++ b/src/main/webapp/start.html
@@ -55,7 +55,7 @@
     </section>
     <!-- footer -->
     <footer>
-        <span>© Copyright Revify</span>
+        <span>© Copyright Revify 2015</span>
     </footer>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
