--- a/src/main/webapp/user-reviews.html
+++ b/src/main/webapp/user-reviews.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/user-reviews.css">
 	<link rel="stylesheet" type="text/css" href="css/menu.css">
+    <link rel="stylesheet" type="text/css" href="css/home.css">
 	<link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
@@ -20,6 +21,7 @@
 </head>
 
 <body>
+<div class="disablingDiv"></div>
 	<div class="wrapper">
 		<header>
 			<nav class="navbar navbar-background navbar-fixed-top">
@@ -34,12 +36,15 @@
                        		 </div>
                     	</div>
                     	<div class="login col-md-6">
-                        	<a class="text-uppercase" href="start.html">Log In</a>
-                        	<img src="images/login-icon-purple.png">
+                        	<a id="login" class="text-uppercase" href="#">Log In</a>
+                        	<img src="images/login-icon.png">
                     	</div>
 					</div>
 				</div>
 			</nav>
+            <div id="spinner" class="spinner" style="display:none;">
+                <img id="img-spinner" src="images/ajax-loader-circle-big.gif" alt="Loading"/>
+            </div>
 		</header>
 		<section id="section">
 			<div class="container-fluid" id="container">
@@ -56,7 +61,7 @@
 
 		</section>
     <footer>
-        <p>©Company Copyright</p>
+        <p>© Copyright Revify 2015</p>
     </footer>
 
         <script src="js/home.js"></script>
