--- a/src/main/webapp/detailedReviews.html
+++ b/src/main/webapp/detailedReviews.html
@@ -29,7 +29,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <span class="logo">Revify</span>
+                        <span class="logo" onclick="location.href='home.html'">Revify</span>
                     </div>
                     <div class="login col-md-6">
                         <a class="text-uppercase" href="start.html">Log In</a>
