--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -27,7 +27,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <a href="home.html"><span class="logo">Revify</span></a>
+                        <a href="home.html"><span class="logo" onclick="location.href='home.html'">Revify</span></a>
                         <div class="dl-menuwrapper">
                             <button class="dl-trigger"></button>
                             <ul class="dl-menu">
