--- a/src/main/webapp/reviews.html
+++ b/src/main/webapp/reviews.html
@@ -36,7 +36,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6">
-                    <span class="logo">Revify</span>
+                    <span class="logo" onclick="location.href='home.html'">Revify</span>
                 </div>
                 <div class="col-md-6 login">
                     <a class="login" href="">Log In</a>
