--- a/src/main/webapp/user-reviews.html
+++ b/src/main/webapp/user-reviews.html
@@ -26,7 +26,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6">
-                        	<span class="logo">Revify</span>
+                        	<span class="logo" onclick="location.href='home.html'">Revify</span>
                         	<div class="dl-menuwrapper">
                             	<button class="dl-trigger"></button>
                             	<ul class="dl-menu">
