change login icon

--- a/src/main/webapp/detailedReviews.html
+++ b/src/main/webapp/detailedReviews.html
@@ -5,6 +5,7 @@
     <title>Detailed Reviews</title>
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/detailed.css">
+    <link rel="stylesheet" type="text/css" href="css/home.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
@@ -29,7 +30,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <span class="logo">Revify</span>
+                        <a href="home.html"><span class="logo">Revify</span></a>
                     </div>
                     <div class="login col-md-6">
                         <a class="text-uppercase" href="start.html">Log In</a>
