--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -36,7 +36,7 @@
                     </div>
                     <div class="login col-md-6">
                         <a id="login" class="text-uppercase" href="#">Log In</a>
-                        <img src="images/login-icon.png">
+                        <img src="images/login-icon2.png">
                     </div>
                 </div>
             </div>
