--- a/src/main/webapp/template-latest-review.html
+++ b/src/main/webapp/template-latest-review.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/user-reviews.css">
     <link rel="stylesheet" type="text/css" href="css/detailed.css">
     <link rel="stylesheet" type="text/css" href="css/menu.css">
+    <link rel="stylesheet" type="text/css" href="css/home.css">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" type="text/css">
@@ -29,7 +30,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <span class="logo">Revify</span>
+                       <a href="home.html"><span class="logo">Revify</span></a>
                         <div class="dl-menuwrapper">
                             <button class="dl-trigger"></button>
                             <ul class="dl-menu">
@@ -38,7 +39,7 @@
                     </div>
                     <div class="login col-md-6">
                         <a class="text-uppercase" href="start.html">Log In</a>
-                        <img src="images/login-icon-purple.png">
+                        <img src="images/login-icon2.png">
                     </div>
                 </div>
             </div>
