--- a/src/main/webapp/start.html
+++ b/src/main/webapp/start.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 
     <!-- Google Web font -->
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 
     <!-- App CSS -->
     <link rel="stylesheet" href="css/start.css">
@@ -35,6 +35,9 @@
     <header>
         <div class="container">
             <span>Revify</span>
+            <div>
+                <a href="feedback.html">Statistics</a>
+            </div>
         </div>
     </header>
     <!-- content-->
