--- a/src/main/webapp/arena_new.html
+++ b/src/main/webapp/arena_new.html
@@ -24,7 +24,7 @@
         margin-left: auto;
         margin-right: auto;
         display: block;
-        background: url('images/bg.png') no-repeat;
+        background: url('images/bg2.png') no-repeat;
         background-size: cover;
     }
     </style>
