--- a/src/main/webapp/latest-review.html
+++ b/src/main/webapp/latest-review.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/user-reviews.css">
     <link rel="stylesheet" type="text/css" href="css/detailed.css">
     <link rel="stylesheet" type="text/css" href="css/menu.css">
-    <link rel="stylesheet" type="text/css" href="css/home.css">
+    <!--<link rel="stylesheet" type="text/css" href="css/home.css">-->
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" type="text/css">
