--- a/src/main/webapp/detailedReviews.html
+++ b/src/main/webapp/detailedReviews.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/detailed.css">
     <link rel="stylesheet" type="text/css" href="css/home.css">
     <link rel="stylesheet" type="text/css" href="css/menu.css">
+    <link rel="stylesheet" type="text/css" href="css/user-reviews.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
@@ -53,7 +54,7 @@
         </div>
     </header>
     <section id = "section">
-        <span style="float:right; margin-top:1%">
+        <span style="float: right; margin-right: 4%; margin-top:1%">
            <button type="button" class="btn btn-primary" onclick = "location.href='user-reviews.html'">Back</button>
         </span>
         <div class="container" id = "container">
@@ -64,9 +65,7 @@
     <footer>
         <span>© Copyright Revify</span>
     </footer>
-
     <script src="js/home.js"></script>
-
 </div>
 
 </body>
