--- a/src/main/webapp/feedback.html
+++ b/src/main/webapp/feedback.html
@@ -46,14 +46,11 @@
     </div>
 </div>
 
-<div class="container" id="details">
+<div class="container-fluid" id="details">
     <div class="row" style="margin-top:50px">
         <div class="col-md-12">
             <div class="row">
-                <div class="col-md-4 other">
-                    <div id="gauge" style="width: 200px; height: 300px; margin: 0 auto"></div>
-                </div>
-                <div class="col-md-8 other2">
+                <div class="col-md-12 other2">
                     <div id="chart2" style="min-width: 310px; max-width: 800px; height: 400px; margin: 0 auto;">
                     </div>
                 </div>
