--- a/src/main/webapp/start.html
+++ b/src/main/webapp/start.html
@@ -10,7 +10,6 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 
     <!-- Google Web font -->
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto' rel='stylesheet' type='text/css'>
@@ -36,7 +35,7 @@
         <div class="container">
             <span>Revify</span>
             <div>
-                <a href="feedback.html">Statistics</a>
+                <a class="feedback" href="feedback.html">Statistics</a>
             </div>
         </div>
     </header>
@@ -61,7 +60,7 @@
         <span>© Copyright Revify 2015</span>
     </footer>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script src="js/start.js"></script>
 </div>
 </body>
