--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -8,6 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="js/jquery.cookie.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -35,8 +36,8 @@
                         </div>
                     </div>
                     <div class="login col-md-6">
-                        <a id="login" class="text-uppercase" href="#">Log In</a>
-                        <img src="images/login-icon2.png">
+                        <!--<a id="login" class="text-uppercase" href="#">Log In</a>
+                        <img src="images/login-icon2.png">-->
                     </div>
                 </div>
             </div>
