Add cookie info on all pages

--- a/src/main/webapp/detailedReviews.html
+++ b/src/main/webapp/detailedReviews.html
@@ -12,8 +12,9 @@
     <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="js/jquery.cookie.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <script src = "js/detailedReviews.js"></script>
+
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -42,8 +43,8 @@
                         </div>
                     </div>
                     <div class="login col-md-6">
-                        <a id="login" class="text-uppercase" href="#">Log In</a>
-                        <img src="images/login-icon2.png">
+                        <!--<a id="login" class="text-uppercase" href="#">Log In</a>
+                        <img src="images/login-icon2.png">-->
 
                     </div>
                 </div>
@@ -63,9 +64,11 @@
     </section>
     <!-- footer -->
     <footer>
-        <span>© Copyright Revify</span>
+        <p>© Copyright Revify</p>
     </footer>
+    <script src="js/header.js"></script>
     <script src="js/home.js"></script>
+    <script src = "js/detailedReviews.js"></script>
 </div>
 
 </body>
