--- a/src/main/webapp/feedback.html
+++ b/src/main/webapp/feedback.html
@@ -30,8 +30,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6">
-                    <a><span class="logo">Revify</span></a>
-                    <span class="logo" onclick="location.href='home.html'">Revify</span>
+                    <a href="home.html"><span class="logo">Revify</span></a>
                 </div>
 
             </div>
