--- a/src/main/webapp/sortedReviews.html
+++ b/src/main/webapp/sortedReviews.html
@@ -8,6 +8,7 @@
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="js/jquery.cookie.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -40,8 +41,8 @@
                         </div>
                     </div>
                     <div class="login col-md-6">
-                        <a class="text-uppercase" href="start.html">Log In</a>
-                        <img src="images/login-icon2.png">
+                    <!--    <a class="text-uppercase" href="start.html">Log In</a>
+                        <img src="images/login-icon2.png">-->
                     </div>
                 </div>
             </div>
@@ -60,6 +61,7 @@
     <footer>
         <p>©Company Copyright</p>
     </footer>
+    <script src="js/header.js"></script>
     <script src="js/home.js"></script>
     <script src = "js/sortedReviews.js"></script>
 </div>
