--- a/src/main/webapp/start.html
+++ b/src/main/webapp/start.html
@@ -35,7 +35,7 @@
         <div class="container">
             <span>Revify</span>
             <div>
-                <a class="feedback" href="feedback.html">Statistics</a>
+                <a id="feedback" class="feedback" href="#">Statistics</a>
             </div>
         </div>
     </header>
