--- a/src/main/webapp/sortedReviews.html
+++ b/src/main/webapp/sortedReviews.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+<div class="disablingDiv"></div>
 <div class="wrapper">
     <header>
         <nav class="navbar navbar-background navbar-fixed-top">
@@ -43,6 +44,9 @@
                 </div>
             </div>
         </nav>
+        <div id="spinner" class="spinner" style="display:none;">
+            <img id="img-spinner" src="images/ajax-loader-circle-big.gif" alt="Loading"/>
+        </div>
     </header>
     <section id="section">
         <div class="container" id="container">
