--- a/src/main/webapp/latest-review.html
+++ b/src/main/webapp/latest-review.html
@@ -40,10 +40,10 @@
                         </div>
                     </div>
 
-                    <div class="login col-md-6">
+                <!--    <div class="login col-md-6">
                         <a class="text-uppercase" href="start.html">Log In</a>
                         <img src="images/login-icon2.png">
-                    </div>
+                    </div>-->
 
                 </div>
             </div>
